<resources>
    <string name="app_name">Measuring Toolkit</string>
    <string name="action_settings">Settings</string>
    <string name="compass_menu_text">Compass</string>
    <string name="altimeter_menu_text">Altimeter</string>
    <string name="level_menu_text">Level</string>
    <string name="stopwatch_menu_text">Stopwatch</string>
    <string name="timer_menu_text">Timer</string>
    <string name="seismometer_menu_text">Seismometer</string>
    <string name="metronome_menu_text">Metronome</string>
    <string name="barometer_menu_text">Barometer</string>
    <string name="teslameter_menu_text">Teslameter</string>
    <string name="back_button_text">Back</string>
    <string name="todo">TODO</string>
    <string name="degreeSymbol">0x00B0</string>
    <string name="latitude">Latitude: </string>
    <string name="longitude">Longitude: </string>
    <string name="switch_units">Switch Units</string>
    <string name="hours">hrs</string>
    <string name="minutes">min</string>
    <string name="seconds">sec</string>
    <string name="cancel">CANCEL</string>
    <string name="start">START</string>
    <string name="_00_00_00">00:00.000</string>
    <string name="pause">Pause</string>
    <string name="reset">Reset</string>
    <string name="lap">LAP</string>
</resources>
