<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/MainMenu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollIndicators="right"
    android:scrollbars="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/compassMenuButton"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:backgroundTint="#E2C100"
        android:drawableStart="@drawable/ic_explore_black_24dp"
        android:drawablePadding="16dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/compass_menu_text"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#3B3B3B"
        android:textSize="42sp" />

    <Button
        android:id="@+id/altimeterMenuButton"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:backgroundTint="#4598C4"
        android:drawableStart="@drawable/ic_flight_takeoff_black_24dp"
        android:drawablePadding="16dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/altimeter_menu_text"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#3B3B3B"
        android:textSize="42sp" />

    <Button
        android:id="@+id/levelMenuButton"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:backgroundTint="#85C443"
        android:drawableStart="@drawable/ic_gps_fixed_black_24dp"
        android:drawablePadding="16dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/level_menu_text"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#3B3B3B"
        android:textSize="42sp" />

</LinearLayout>