<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D43D43">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:padding="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="0"
            android:inputType="number"
            android:maxLength="2"
            android:singleLine="true"
            android:textAlignment="center"
            android:textColor="#3B3B3B"
            android:textSize="34sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:text="@string/hours"
            android:textColor="#3B3B3B"
            android:textSize="34sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/minutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="0"
            android:inputType="number"
            android:maxLength="2"
            android:singleLine="true"
            android:textAlignment="center"
            android:textColor="#3B3B3B"
            android:textSize="34sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:text="@string/minutes"
            android:textColor="#3B3B3B"
            android:textSize="34sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/seconds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="0"
            android:inputType="number"
            android:maxLength="2"
            android:singleLine="true"
            android:textAlignment="center"
            android:textColor="#3B3B3B"
            android:textSize="34sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seconds"
            android:textColor="#3B3B3B"
            android:textSize="34sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="128dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="87dp"
            android:layout_marginRight="56dp"
            android:background="@drawable/button_round"
            android:text="@string/cancel"
            android:textColor="#FF7043"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="87dp"
            android:layout_marginLeft="56dp"
            android:background="@drawable/button_round"
            android:text="@string/start"
            android:textColor="#66BB6A"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>